bugfix/WY-198 fix custom site logo stretching on site header

--- a/src/scss/layout/_masthead.scss
+++ b/src/scss/layout/_masthead.scss
@@ -73,7 +73,7 @@
 		height: auto;
 		max-width: 200px;
 		max-height: 48px;
-		width: 100%;
+		width: auto;
 	}
 
 	.custom-logo:not(.has-icon) {
